--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.smartlocker"
         tools:targetApi="31">
         <activity
+            android:name=".GerarQRcodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RecuperarSenhaActivity"
+            android:exported="false" />
+        <activity
             android:name=".CadastroActivity"
             android:exported="false" />
         <activity
