Adicionar activity xml e classe kotlin do login, além de colocar no manifesto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".CadastroActivity"
             android:exported="false" />
         <activity
+            android:name=".LoginActivity"
+            android:exported="false"/>
+        <activity
             android:name=".InicioActivity"
             android:exported="true">
             <intent-filter>
