--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.smartlocker"
         tools:targetApi="31">
         <activity
+            android:name=".ChangeActivity"
+            android:exported="false" />
+        <activity
             android:name=".RentLockerActivity"
             android:exported="false" />
         <activity
@@ -26,7 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".InicioActivity"
             android:exported="true">
