Implementado ReleaseLockerActivity completo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         android:theme="@style/Theme.smartlocker"
         tools:targetApi="33">
         <activity
+            android:name=".ReleaseLockerActivity"
+            android:exported="false" />
+        <activity
             android:name=".CamPreviewActivity"
             android:exported="false" />
         <activity
@@ -60,11 +63,13 @@
         <activity
             android:name=".InicioActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <meta-data
