Image view adicionado ao xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,21 @@
             android:exported="false" />
         <activity
             android:name=".FotoDuplaDoisActivity"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".FotoDuplaUmActivity"
             android:exported="false" />
         <activity
             android:name=".FotoUnicaActivity"
-            android:exported="false" />
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".ReleaseLockerActivity"
             android:exported="false" />
@@ -78,11 +86,7 @@
         <activity
             android:name=".InicioActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
