--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,15 @@
         android:theme="@style/Theme.smartlocker"
         tools:targetApi="33">
         <activity
+            android:name=".ArmarioRentedActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ArmarioAbertoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GerenteInicioActivity"
+            android:exported="false" />
+        <activity
             android:name=".ReleaseLockerActivity"
             android:exported="false" />
         <activity
@@ -38,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".MapsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ChangeActivity"
             android:exported="false" />
@@ -63,13 +72,11 @@
         <activity
             android:name=".InicioActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
