--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
@@ -53,10 +54,10 @@
             android:exported="false" />
         <activity
             android:name=".MapsActivity"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".ChangeActivity"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".ScanQRcodeActivity"
             android:exported="false" />
