--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission
@@ -32,6 +33,9 @@
         android:theme="@style/Theme.smartlocker"
         tools:targetApi="33">
         <activity
+            android:name=".ListaCartaoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ConfirmarDuplaActivity"
             android:exported="false" />
         <activity
@@ -39,13 +43,13 @@
             android:exported="false" />
         <activity
             android:name=".FotoDuplaDoisActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".FotoDuplaUmActivity"
             android:exported="false" />
         <activity
             android:name=".FotoUnicaActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".OpenLockerActivity"
             android:exported="false" />
@@ -60,10 +64,10 @@
             android:exported="false" />
         <activity
             android:name=".MapsActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ChangeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ScanQRcodeActivity"
             android:exported="false" />
